[tool.poetry]
name = "polundra"
version = "0.1.1"
description = "An extended alert notifier."
authors = ["Artur Svistunov <poopa@example.com>", "Ilya Zakharov <loopa@example.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pulsectl = "^21.9.1"
Wave = "^0.0.2"
dbus-python = "^1.2.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
