[tool.poetry]
name = "polundra"
version = "0.1.4"
description = "An extended alert notifier."
authors = ["Artur Svistunov <poopa@example.com>", "Ilya Zakharov <loopa@example.com"]
license = "MIT"
repository = "https://github.com/smgd/polundra"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pulsectl = "^21.9.1"
Wave = "^0.0.2"
dbus-python = "^1.2.16"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
polundra = 'polundra'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
